--- a/templates/contactUs.html
+++ b/templates/contactUs.html
@@ -394,7 +394,7 @@
                             <label for="floatingTextarea">Enter your inquiries</label>
                         </div>
                         <div class="submit-button">
-                            <a href="#" onclick="openModal()">Don't have an account?</a>
+                            <a onclick="openModal()">Don't have an account?</a>
                             <input type="submit" class="btn btn-primary" value="Submit">
                         </div>
                     </form>
