--- a/templates/emailContactUs.html
+++ b/templates/emailContactUs.html
@@ -376,9 +376,10 @@
                             <a href="/trackContactUs" target="_blank">View asked questions</a>
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="floatingInput1"
-                                placeholder="Enter your email" required name="student_id">
-                            <label for="floatingInput1">Enter your email</label> 
+                            <input type="email" class="form-control" id="floatingInput1" placeholder="Enter your email"
+                                required name="student_id">
+                            <label for="floatingInput1">Enter your email</label>
+                        </div>
                         <div class="form-floating mb-3">
                             <select class="form-select" id="categorySelect" name="category" required name="category">
                                 <option value="general">General Inquiry</option>
