--- a/templates/emailContactUs.html
+++ b/templates/emailContactUs.html
@@ -370,14 +370,24 @@
             {% endwith %}
             <div class="feedback-box">
                 <div class="feedback-form">
-                    <form action="/submitContactUs" method="POST">
+                    <form action="/submitEmailContactUs" method="POST">
                         <div class="form-header">
                             <span class="title">Contact Us</span>
                         </div>
                         <div class="form-floating mb-3">
                             <input type="email" class="form-control" id="floatingInput1" placeholder="Enter your email"
-                                required name="student_id">
+                                required name="email">
                             <label for="floatingInput1">Enter your email</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="floatingInput2" placeholder="Enter your name"
+                                required name="name">
+                            <label for="floatingInput2">Enter your name</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="floatingInput2" placeholder="Enter your name"
+                                required name="subject">
+                            <label for="floatingInput3">Enter your subject</label>
                         </div>
                         <div class="form-floating mb-3">
                             <select class="form-select" id="categorySelect" name="category" required name="category">
@@ -392,7 +402,7 @@
                         </div>
                         <div class="form-floating mb-3">
                             <textarea class="form-control" id="floatingTextarea" placeholder="Enter your inquiries"
-                                style="height: 200px;" required name="inquiries"></textarea>
+                                style="height: 150px;" required name="inquiries"></textarea>
                             <label for="floatingTextarea">Enter your inquiries</label>
                         </div>
                         <div class="submit-button">
@@ -405,7 +415,7 @@
                     <!-- Google Maps Embed API -->
                     <iframe style="width: 100%;"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3983.5380217035718!2d101.7285053941956!3d3.2152015485914953!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2dc5e067aae3ab84!2sTunku+Abdul+Rahman+University+College!5e0!3m2!1sen!2sus!4v1436418290470"
-                        width="100%" height="250" frameborder="0" allowfullscreen=""></iframe>
+                        width="100%" height="350" frameborder="0" allowfullscreen=""></iframe>
 
                     <div class="contact-info">
                         <!-- Address -->
