--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -327,6 +327,7 @@
                 <i class="fas fa-search search-icon"></i>
             </div>
         </div>
+        <!-- Add this section for displaying flash messages -->
         {% with messages = get_flashed_messages() %}
         {% if messages %}
         <div class="alert alert-success">
@@ -390,7 +391,7 @@
                                             <div class="submit-button">
                                                 <input type="submit" class="btn btn-primary"
                                                     value="{% if contact[4] %}Replied{% else %}Reply{% endif %}" {% if
-                                                    contact[4] %}disabled style="cursor: not-allowed;" endif %}>
+                                                    contact[4] %} {% disabled style="cursor: not-allowed;" endif %}>
                                             </div>
                                         </td>
                                     </tr>
