--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -391,7 +391,7 @@
                                             <div class="submit-button">
                                                 <input type="submit" class="btn btn-primary"
                                                     value="{% if contact[4] %}Replied{% else %}Reply{% endif %}" {% if
-                                                    contact[4] %} {% disabled style="cursor: not-allowed;" endif %}>
+                                                    contact[4] %} disabled style="cursor: not-allowed;" {% endif %}>
                                             </div>
                                         </td>
                                     </tr>
