--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -247,7 +247,7 @@
         .table td,
         .table th {
             padding: 10px;
-            text-align: left;
+            text-align: center;
         }
 
         /* Borders */
@@ -378,8 +378,8 @@
                         <table class="table table-bordered" id="data-table">
                             <thead>
                                 <tr>
-                                    <th data-sortable="true" data-order="asc">Student</th>
-                                    <th data-sortable="true" data-order="asc">Category</th>
+                                    <th>Student</th>
+                                    <th>Category</th>
                                     <th>Question</th>
                                     <th>Reply</th>
                                     <th>Replied By</th>
