--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -460,6 +460,7 @@
     <script>
         $(document).ready(function () {
             $('#data-table').DataTable();
+            searching: false // Disable search feature
         });
     </script>
 
