--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -331,9 +331,9 @@
         <div class="details-header">
             <h2>View Asked Questions</h2>
             <div class="search-bar">
-                <input type="text" class="form-control floating-search-bar"
+                <!-- <input type="text" class="form-control floating-search-bar"
                     placeholder="Search question / student id / name...">
-                <i class="fas fa-search search-icon"></i>
+                <i class="fas fa-search search-icon"></i> -->
             </div>
         </div>
         <!-- Add this section for displaying flash messages -->
