--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -321,6 +321,20 @@
         .category-td {
             text-transform: capitalize;
         }
+
+        /* Adjust the position of the search input */
+        div.dataTables_wrapper div.dataTables_filter {
+            text-align: right;
+            margin-right: 10px;
+        }
+
+        /* Optionally, you can style the search input */
+        div.dataTables_wrapper div.dataTables_filter input {
+            /* Add your CSS styles here */
+            border: 1px solid #ccc;
+            padding: 5px;
+            border-radius: 5px;
+        }
     </style>
 </head>
 
