--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -335,6 +335,10 @@
             padding: 5px;
             border-radius: 5px;
         }
+
+        .dataTables_wrapper .dataTables_filter input {
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 
