--- a/templates/studentContactUs.html
+++ b/templates/studentContactUs.html
@@ -389,15 +389,17 @@
                             </thead>
                             <tbody>
                                 {% for contact in contact_data %}
-                                    <input type="hidden" value="{{ contact[0] }}" name="contactId">
-                                    <tr>
-                                        <td>{{ contact[6] }}</td>
-                                        <td class="category-td">{{ contact[2] }}</td>
-                                        <td><textarea class="form-control" readonly>{{ contact[3] }}</textarea></td>
-                                        <td><textarea class="form-control" name="reply" {% if contact[4] %} readonly {%
-                                                endif %}>{{ contact[4] }}</textarea></td>
-                                        <td class="repliedBy-td">{{ contact[5] }}</td>
-                                    </tr>
+                                <input type="hidden" value="{{ contact[0] }}" name="contactId">
+                                <tr>
+                                    <td>{{ contact[2] }}</td>
+                                    <td class="category-td"
+                                        style="color: {% if contact[1] == 'pending' %}orange{% elif contact[1] == 'completed' %}green{% else %}black{% endif %};">
+                                        {{ contact[1] }}</td>
+                                    <td><textarea class="form-control" readonly>{{ contact[3] }}</textarea></td>
+                                    <td><textarea class="form-control" name="reply" {% if contact[4] %} readonly {%
+                                            endif %}>{{ contact[4] }}</textarea></td>
+                                    <td class="repliedBy-td">{{ contact[5] }}</td>
+                                </tr>
                                 {% endfor %}
                             </tbody>
                         </table>
