--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -344,7 +344,7 @@
 
 <body>
     <div class="container">
-        <h2 style="margin-top: 10px;">Welcome! {{ name }}</h2>
+        <h2 style="margin-top: 10px;">Welcome! [Admin : {{ name }}]</h2>
         <hr>
         <div class="details-header">
             <h2>View Asked Questions</h2>
