--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -410,7 +410,9 @@
                                     <input type="hidden" value="{{ contact[0] }}" name="contactId">
                                     <tr>
                                         <td>{{ contact[6] }}</td>
-                                        <td class="category-td">{{ contact[2] }}</td>
+                                        <td class="category-td"
+                                            style="color: {% if contact[1] == 'pending' %}orange{% elif contact[1] == 'completed' %}green{% else %}black{% endif %};">
+                                            {{ contact[2] }}</td>
                                         <td><textarea class="form-control" readonly>{{ contact[3] }}</textarea></td>
                                         <td><textarea class="form-control" name="reply" {% if contact[4] %} readonly {%
                                                 endif %}>{{ contact[4] }}</textarea></td>
