--- a/templates/studentContactUs.html
+++ b/templates/studentContactUs.html
@@ -396,8 +396,7 @@
                                         style="color: {% if contact[1] == 'pending' %}orange{% elif contact[1] == 'completed' %}green{% else %}black{% endif %};">
                                         {{ contact[1] }}</td>
                                     <td><textarea class="form-control" readonly>{{ contact[3] }}</textarea></td>
-                                    <td><textarea class="form-control" name="reply" {% if contact[4] %} readonly {%
-                                            endif %}>{{ contact[4] }}</textarea></td>
+                                    <td><textarea class="form-control" name="reply" readonly>{{ contact[4] }}</textarea></td>
                                     <td class="repliedBy-td">{{ contact[5] }}</td>
                                 </tr>
                                 {% endfor %}
