--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -367,12 +367,12 @@
                 <!-- Left column for filter options -->
                 <div class="col-md-2">
                     <div class="filter-details">
-                        <form action="/applyFilter" method="POST">
+                        <form action="/applyFilter">
                             <label for="category-filter">Category</label>
                             <select id="category-filter" name="category" class="form-select">
                                 <option value="*">All</option>
                                 <option value="general">General</option>
-                                <option value="admission">Admission</option>
+                                <option value="admissions">Admission</option>
                                 <option value="courses">Courses</option>
                                 <option value="events">Events</option>
                                 <option value="technical">Technical</option>
