--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -367,7 +367,7 @@
                 <!-- Left column for filter options -->
                 <div class="col-md-2">
                     <div class="filter-details">
-                        <form action="/applyFilter">
+                        <form action="/applyFilter" method="POST">
                             <label for="category-filter">Category</label>
                             <select id="category-filter" name="category" class="form-select">
                                 <option value="*">All</option>
