--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -388,7 +388,7 @@
 
                             <div class="submit-button"
                                 style="display: flex; align-items: center; justify-content: center;">
-                                <input type="button" class="btn btn-primary" value="Apply Filters">
+                                <input type="submit" class="btn btn-primary" value="Apply Filters">
                             </div>
                         </form>
                     </div>
