--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -343,6 +343,22 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">TARUMT College</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <!-- Add a Log Out button in the navbar -->
+                <li class="nav-item">
+                    <a class="nav-link btn btn-danger" href="/logout">Log Out</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container">
         <h2 style="margin-top: 10px;">Welcome! [Admin : {{ name }}]</h2>
         <hr>
