updates on reply

--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -485,9 +485,9 @@
                                         <td class="repliedBy-td">{{ contact[5] }}</td>
                                         <td style="text-align: center;">
                                             <div class="submit-button">
-                                                <input type="submit" class="btn btn-primary"
-                                                    value="{% if contact[4] %}Replied{% else %}Reply{% endif %}" {% if
-                                                    contact[4] %} disabled style="cursor: not-allowed;" {% endif %}>
+                                                <input type="submit" class="btn btn-primary" value="Reply" {% if
+                                                    contact[4] is not none %} disabled style="cursor: not-allowed;" {%
+                                                    endif %}/>
                                             </div>
                                         </td>
                                     </tr>
