--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -486,7 +486,7 @@
                                         <td style="text-align: center;">
                                             <div class="submit-button">
                                                 <input type="submit" class="btn btn-primary" value="Reply" {% if
-                                                    contact[4] is not none %} disabled style="cursor: not-allowed;" {%
+                                                    contact[4] is not None %} disabled style="cursor: not-allowed;" {%
                                                     endif %}/>
                                             </div>
                                         </td>
